[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regulatory-reporting-engine"
version = "0.1.0"
description = "Training regulatory reporting engine with validation, scheduling, execution history, and audit trail."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/regulatory_reporting_engine"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
